<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/nav_host_fragment"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:defaultNavHost="true"
        app:navGraph="@navigation/nav_graph"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/bottomNavCard"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>



    <androidx.cardview.widget.CardView
        android:id="@+id/bottomNavCard"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:cardCornerRadius="28dp"
        app:cardElevation="8dp"
        app:cardBackgroundColor="@color/bottom_nav_bg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="10dp">

            <!-- Dashboard - active -->
            <LinearLayout
                android:id="@+id/navDashboard"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:background="@drawable/bg_bottom_nav_active_pill"
                android:paddingVertical="10dp"
                android:paddingHorizontal="8dp"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/navTransactions"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">

                <ImageView
                    android:id="@+id/imgDashboard"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:src="@drawable/ic_dashboard"
                    app:tint="@color/white" />

                <TextView
                    android:id="@+id/txtDashboard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:text="@string/dashboard"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <!-- Transactions -->
            <LinearLayout
                android:id="@+id/navTransactions"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:background="?attr/selectableItemBackgroundBorderless"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toEndOf="@id/navDashboard"
                app:layout_constraintEnd_toStartOf="@id/navAdd"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">

                <ImageView
                    android:id="@+id/imgTransactions"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/ic_transactions"
                    app:tint="@color/bottom_nav_inactive" />

                <TextView
                    android:id="@+id/txtTransactions"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:text="@string/transactions"
                    android:textColor="@color/bottom_nav_inactive"
                    android:textSize="11sp" />
            </LinearLayout>

            <!-- Add -->
            <LinearLayout
                android:id="@+id/navAdd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:background="?attr/selectableItemBackgroundBorderless"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toEndOf="@id/navTransactions"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">

                <ImageView
                    android:id="@+id/imgAdd"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/ic_plus"
                    app:tint="@color/bottom_nav_inactive" />

                <TextView
                    android:id="@+id/txtAdd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:text="@string/add"
                    android:textColor="@color/bottom_nav_inactive"
                    android:textSize="11sp" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>